Implementing convex hull and Nash equilibria check (#2)
* Adding generate game function

* Fix

* Adding best reply function

* Fixing a bug in line #88

* Bug fix: loading LinearAlgebra pkg

* Implementing convex hull as an option into best_reply

* Implementing function to check Nash equilibria

* Improving pkg compatibility

* Improving pkg compatibility #2

Co-authored-by: Agata Skorupka <Agata.Skorupka@pl.ey.com>
Co-authored-by: KrainskiL <lukasz.krainski123@gmail.com>

--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,8 @@ authors = ["Lukasz Krainski <lukasz.krainski123@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CDDLib = "3391f64e-dcde-5f30-b752-e11513730f60"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
