--- a/Project.toml
+++ b/Project.toml
@@ -7,5 +7,6 @@ version = "0.1.0"
 CDDLib = "3391f64e-dcde-5f30-b752-e11513730f60"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MeshCat = "283c5d60-a78f-5afe-a0af-af636b173e11"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
